Карты ебанул епта

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://bootstrap-3.ru/examples/navbar-fixed-top/#">Покер</a>
+            <a class="navbar-brand" href="">Покер</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -50,67 +50,67 @@
         </form>
     </div>
 
-    <div id="warp_game" class = "container">
-        <h4 id="title_game_bank">Банк:  </h4>
-        <h4 id="title_game_bet">Ставки игроков: </h4>
-        <h4 id="title_game_table">Стол: </h4>
-        <h4 id="title_game_cards">Ваши карты: </h4>
-        <h4 id="title_game_turn">Ход: </h4>
-        <h4> </h4>
-        <!--<div id="table">
-            <div class="scene scene--card">
-                <div class="crd">
-                    <div class="crd__face crd__face--front">
-                        <div class="card">
-                            <div class="front">
-                                <div class="index">5<br>♣</div>
-                                <div class="spotA1">♣</div>
-                                <div class="spotA3">♣</div>
-                                <div class="spotA5">♣</div>
-                                <div class="spotB2">♣</div>
-                                <div class="spotB4">♣</div>
-                                <div class="spotC1">♣</div>
-                                <div class="spotC3">♣</div>
-                                <div class="spotC5">♣</div>
+    <div id="warp_game" class="container">
+        <form class="form-signin" role="form">
+            <h4 id="title_game_bank">Банк:  </h4>
+            <h4 id="title_game_bet">Ставки игроков: </h4>
+            <h4 id="title_game_table">Стол: </h4>
+            <h4 id="title_game_cards">Ваши карты: </h4>
+            <h4 id="title_game_turn">Ход: </h4>
+            <h4> </h4>
+            <!--<div id="table">
+                <div class="scene scene--card">
+                    <div class="crd">
+                        <div class="crd__face crd__face--front">
+                            <div class="card">
+                                <div class="front">
+                                    <div class="index">5<br>♣</div>
+                                    <div class="spotA1">♣</div>
+                                    <div class="spotA3">♣</div>
+                                    <div class="spotA5">♣</div>
+                                    <div class="spotB2">♣</div>
+                                    <div class="spotB4">♣</div>
+                                    <div class="spotC1">♣</div>
+                                    <div class="spotC3">♣</div>
+                                    <div class="spotC5">♣</div>
+                                </div>
                             </div>
                         </div>
+                        <div class="crd__face crd__face--back">
+                            <div class="card"></div>
+                        </div>
                     </div>
-                    <div class="crd__face crd__face--back">
-                        <div class="card"></div>
+                </div>
+                <div style="margin-left: 150px" class="scene scene--card">
+                    <div class="crd">
+                        <div class="crd__face crd__face--front">
+                            <div class="card">
+                                <div class="front">
+                                    <div id = "card-1" class="index">8<br>♣</div>
+                                    <div class="spotA1">♣</div>
+                                    <div class="spotA3">♣</div>
+                                    <div class="spotA5">♣</div>
+                                    <div class="spotB2">♣</div>
+                                    <div class="spotB4">♣</div>
+                                    <div class="spotC1">♣</div>
+                                    <div class="spotC3">♣</div>
+                                    <div class="spotC5">♣</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="crd__face crd__face--back">
+                            <div class="card"></div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div style="margin-left: 150px" class="scene scene--card">
-                <div class="crd">
-                    <div class="crd__face crd__face--front">
-                        <div class="card">
-                            <div class="front">
-                                <div id = "card-1" class="index">8<br>♣</div>
-                                <div class="spotA1">♣</div>
-                                <div class="spotA3">♣</div>
-                                <div class="spotA5">♣</div>
-                                <div class="spotB2">♣</div>
-                                <div class="spotB4">♣</div>
-                                <div class="spotC1">♣</div>
-                                <div class="spotC3">♣</div>
-                                <div class="spotC5">♣</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="crd__face crd__face--back">
-                        <div class="card"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        -->
-        <div id="game-event">
+            -->
             <button id="button_fold" class="btn btn-lg btn-primary btn-block" type="submit">Сбросить</button>
             <button id="button_call" class="btn btn-lg btn-primary btn-block" type="submit">Уровнять</button>
             <button id="button_check" class="btn btn-lg btn-primary btn-block" type="submit">Пропустить</button>
             <input type="text" id="inp-rise" class="form-control" placeholder="Поднять на..." required="true" autofocus="" autocomplete="off">
             <button id="button_rise" class="btn btn-lg btn-primary btn-block" type="submit">Поднять</button>
-        </div>
+        </form>
     </div>
     <script src="client.js"></script>
 </body>
